--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -8,7 +8,7 @@
 	<h1 class="title">To-do list</h1>
 
 	<div class="form">
-		<input type="text" class="form__input" placeholder="Введiть задачу...">
+		<input type="text" class="form__input" placeholder="Введiть задачу..." autofocus>
 		<button class="form__button">Додати</button>
 	</div>
 
